# advent-of-code-template

./: LICENSE  README.md  aoc.py  justfile  pyproject.toml
scripts/: day_template.py  utils.py
